fix: bad card contrast for light mode invoice templates

--- a/client/src/component/template/invoice/template.css
+++ b/client/src/component/template/invoice/template.css
@@ -1,7 +1,6 @@
 :root {
-  --background-color: #f9f9f9;
+  --background-color: #f5f5f5;
   --text-color: #000;
-  --border-color: #ddd;
   font-family:
     system-ui,
     -apple-system,
@@ -20,7 +19,6 @@
   :root {
     --background-color: #040404;
     --text-color: #fff;
-    --border-color: #555;
   }
 }
 
